--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -695,12 +695,13 @@ h2 {
     margin-top: 30px;
     box-shadow: 0 18px 200px -60px black;
     border-radius: 50px;
-    width: 425px;
+    width: 50%;
+    height: 800px;
     position: relative;
     backdrop-filter: blur(5px);
     margin-left: 20px;
     padding: 15px;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .profile-card-info {
@@ -712,8 +713,12 @@ h2 {
 }
 
 .profileCard img {
-    width: 200px;
-    height: 200px;
+    /*width: 200px;*/
+    /*height: 200px;*/
+    max-width:230px;
+    max-height:150px;
+    width: auto;
+    height: auto;
     border-radius: 50px;
 }
 
@@ -736,12 +741,11 @@ h2 {
     margin: 10px 0;
 }
 
-#dateSpotsContainer {
-   float: right;
+/* Chat */
+.chatContainer {
+    margin-top: 50px;
 }
 
-
-/* Chat */
 .chatContainer h3 {
     margin: 0;
 }
@@ -751,7 +755,7 @@ h2 {
     border-radius: 10px;
     height: 300px;
     background: white;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .chat-message {
@@ -777,6 +781,59 @@ h2 {
 .back, .right {
     flex: 1;
 }
+
+/* Date Spots */
+#dateSpotsContainer {
+    /*float: right;*/
+    margin-right: 20px;
+    overflow-wrap: break-word;
+    overflow-y: auto;
+}
+
+/*#dateSpotsContainer2 {*/
+/*    margin-top: 40px;*/
+/*}*/
+
+#dateSpotsContainer h3 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#dateSpotsContainer li {
+    list-style-type: none;
+}
+
+#businessDiv {
+    display: flex;
+    margin: 20px 5px;
+}
+
+#businessDiv img {
+    width: 120px;
+    min-width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
+#businessInfo {
+    text-align: left;
+    margin-left: 15px;
+}
+
+.price {
+    color: green;
+}
+
+#businessInfo p {
+    margin-bottom: 5px;
+}
+
+#businessInfo a {
+    color: white;
+    font-size: 25px;
+    margin-bottom: 5px;
+}
+
 
 
 
