--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -461,26 +461,29 @@ h2 {
 
 #swiper {
     height: 500px;
+    width: 70%;
     aspect-ratio: 2 / 3;
     perspective: 1000px;
     perspective-origin: center 50%;
     transform-style: preserve-3d;
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .card {
-    width: 100%;
+    /*width: 100%;*/
     height: 600px;
     position: absolute;
-    transform: translateZ(calc(-30px * var(--i)))
-    translateY(calc(-20px * var(--i))) rotate(calc(-4deg * var(--i)));
-    /*filter: drop-shadow(2px 2px 20px rgba(0, 0, 0, 1));*/
+    /*transform: translateZ(calc(-30px * var(--i)))*/
+    /*translateY(calc(-20px * var(--i))) rotate(calc(-4deg * var(--i)));*/
+    filter: drop-shadow(2px 2px 20px rgba(0, 0, 0, .75));
     cursor: pointer;
     user-select: none;
 }
 
 .card img {
-    width: 75%;
+    width: 85%;
     height: 75%;
     object-fit: cover;
     object-position: 50% 50%;
@@ -488,6 +491,7 @@ h2 {
 }
 
 .swipe-container {
+    display: flex;
     float: right;
     margin-left: 175px;
     width: 400px;
@@ -500,17 +504,53 @@ h2 {
     margin-left: 100px;
 }
 
-.swipeInstructionDiv {
-    width: 310px;
-    margin-top: 30px;
-    margin-left: 0;
-    display: flex;
-    justify-content: space-between;
+#like, #dislike {
+    font-size: 50px;
+    border-radius: 50%;
+    position: relative;
+    /*z-index: 1;*/
+    color: white;
+    top: 50%;
+    animation-name: iconAnimation1;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: both;
+    animation-play-state: paused;
 }
 
-.swipeInstructionDiv p {
-    font-weight: bold;
-    font-size: 20px;
+#dislike {
+    color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+
+}
+
+#like {
+    color: red;
+    background-color: rgba(255, 255, 255, 0.5);
+
+}
+
+#like.trigger,
+#dislike.trigger{
+    animation-name: iconAnimation2;
+}
+
+@keyframes iconAnimation1 {
+    0%, 100% {
+        opacity: 0.2;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
+@keyframes iconAnimation2 {
+    0%, 100% {
+        opacity: 0.2;
+    }
+    50% {
+        opacity: 1;
+    }
 }
 
 #matchesListUl {
@@ -765,13 +805,11 @@ h2 {
 
 
 #popupMatchImg1 {
-    /*animation-name: slide-right;*/
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
 
 #popupMatchImg2 {
-    /*animation-name: slide-left;*/
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
