--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -6,12 +6,10 @@
         </ul>
     </div>
     <div class="swipe-container">
+        <ion-icon id="dislike"  name="heart-dislike-circle-outline"></ion-icon>
         <div id="swiper">
         </div>
-        <div class="swipeInstructionDiv">
-            <p><-- Dislike</p>
-            <p>Like --></p>
-        </div>
+        <ion-icon id="like" name="heart-circle-outline"></ion-icon>
     </div>
     <div class="popup">
         <h2 id="popupH2"></h2>
@@ -33,3 +31,5 @@
         crossorigin="anonymous"></script>
 <script src="/public/js/dashboard/card.js"></script>
 <script src="/public/js/dashboard/dashboard.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
