--- a/views/dashboard/match.handlebars
+++ b/views/dashboard/match.handlebars
@@ -49,7 +49,7 @@
         </div>
         <div class="chatContainer" hidden>
             <div class="row">
-                <div class="col-md-6 offset-md-3 col-sm-12">
+                <div>
                     <div class="backContainer">
                         <span class="back">&larr;</span>
                         <h3 class="text-center">Chat</h3>
