--- a/views/dashboard/match.handlebars
+++ b/views/dashboard/match.handlebars
@@ -5,8 +5,7 @@
 <div class="wrapper">
     <div class="profileCard">
         <figure class="profile-card-img">
-<!--            <img src="{{match.images.profilePic}}">-->
-            <img src="../../public/images/temp_pro_pics/jackie_pro_pic.png">
+            <img src="../{{match.images.profilePic}}">
         </figure>
         <h2>{{match.firstName}}</h2>
         <div class="profile-card-info">
