--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -825,6 +825,22 @@ h2 {
 }
 
 /* Match Page */
+.swiper {
+    width: 100%;
+    height: 300px;
+    text-align: center;
+}
+
+.swiper-slide {
+    display: flex;
+    align-items: center;
+}
+
+.swiper-button-prev, .swiper-button-next {
+    color: white;
+    width: 10px;
+}
+
 .wrapper {
     display: flex;
     justify-content: space-between;
@@ -853,17 +869,11 @@ h2 {
 }
 
 .profileCard img {
-    /*width: 200px;*/
-    /*height: 200px;*/
-    /*max-width:230px;*/
-    /*max-height:150px;*/
-    /*width: auto;*/
-    /*height: auto;*/
     width: 75%;
     height: auto;
     max-height: 350px;
-
     border-radius: 50px;
+    margin: auto;
 }
 
 
