--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -13,7 +13,7 @@
                     </div>
                 </label>
             </div>
-            <h3 id="addPhotos">Additional Photos</h3>
+            <h3 id="addPhotos">Additional Photos<br>(optional)</h3>
             <div class="otherPicsContainer">
                 <div class="form-element">
                     <input type="file" id="file-1" accept="image/*">
