--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -827,7 +827,7 @@ h2 {
 /* Match Page */
 .swiper {
     width: 100%;
-    height: 300px;
+    max-height: 350px;
     text-align: center;
 }
 
@@ -876,7 +876,6 @@ h2 {
     margin: auto;
     cursor: pointer;
 }
-
 
 .profile-card-info {
     color: white;
