--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -829,11 +829,14 @@ h2 {
     width: 100%;
     max-height: 350px;
     text-align: center;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .swiper-slide {
     display: flex;
     align-items: center;
+    vertical-align: top;
 }
 
 .swiper-button-prev, .swiper-button-next {
@@ -866,6 +869,7 @@ h2 {
 
 .profileCard h2 {
     font-size: 35px;
+    margin-top: 0;
 }
 
 .profileCard img {
