--- a/views/dashboard/match.handlebars
+++ b/views/dashboard/match.handlebars
@@ -22,10 +22,8 @@
             </div>
             <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
-
-
         </div>
-        <h2>{{match.firstName}}</h2>
+        <h2 id="matchName">{{match.firstName}}</h2>
         <div class="profile-card-info">
             <dl class="dl">
                 <div class="dlDiv">
