--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -62,7 +62,7 @@
         <section>
             <div class="multi-select-container">
                 <label for="interests">Interests<br>(Select 3-10)</label>
-                <select id="interests" name="interests" multiple size="32" required>
+                <select multiple id="interests" name="interests" size="32" required>
                     <optgroup label="Active Life">
                         <option value="amusementparks">Amusement Parks</option>
                         <option value="aquariums">Aquariums</option>
