values in forms are now retained when user goes to update their settings

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
         <div class="sub-menu-wrap" id="subMenu">
             <div class="sub-menu">
                 <div class="sub-menu-link">
-                    <img id="profileImg" src={{userProPic}}>
-                    <p id="profileP">{{name}}</p>
+                    <img id="profileImg" src={{user.images.profilePic}}>
+                    <p id="profileP">{{user.firstName}}</p>
                 </div>
                 <hr>
                 <a href="/users/dashboard" class="sub-menu-link">
