--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -7,7 +7,7 @@
             <div id="proPicContainer" class="form-element">
                 <input name="proPicFile" type="file" id="file-0" accept="image/*"  tabindex="0">
                 <label for="file-0" id="file-0-preview">
-                    <img src="../../../public/images/image-placeholder.png">
+                    <img id="proPicPreview" src="../../../public/images/image-placeholder.png">
                     <div>
                         <span>+</span>
                     </div>
