updated seed file to properly format user's otherPics field values

--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -58,7 +58,7 @@
 
             <label for="about">
                 About me
-                <input id="about" type="text" name="about" placeholder="Just a guy looking for love..." value="{{user.about}}">
+                <input id="about" type="text" name="about" placeholder="Just a person looking for love..." value="{{user.about}}">
             </label>
             <div class="form-group hidden" id="error-container">
                 <div class="alert alert-danger text-goes-here">
