--- a/views/users/onboarding.handlebars
+++ b/views/users/onboarding.handlebars
@@ -4,18 +4,12 @@
         <section>
             <label for="firstName">
                 First Name
-                <input id="firstName" type="text" name="firstName" placeholder="First Name" value="{{user.firstName}}" 
-                {{#if user.firstName}} readonly
-                {{else}} required
-                {{/if}}/>
+                <input id="firstName" type="text" name="firstName" placeholder="First Name" value="{{user.firstName}}" required/>
             </label>
 
             <label for="bDay">
                 Birthday (mm/dd/yyyy)
-                <input id="birthday" type="text" name="birthday" placeholder="mm/dd/yyyy" value="{{user.birthday}}" 
-                {{#if user.birthday}} readonly
-                {{else}} required
-                {{/if}}/>
+                <input id="birthday" type="text" name="birthday" placeholder="mm/dd/yyyy" value="{{user.birthday}}" required/>
             </label>
 
             <div id="borderContainer">
