--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -4,7 +4,7 @@
         <section>
             <label for="email">
                 Email
-                <input id="email" type="email" name="userEmail" placeholder="Email" value="" required/>
+                <input id="email" name="userEmail" placeholder="Email" value="" required/>
             </label>
             <label for="password">
                 Password
