--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -14,7 +14,7 @@
     <div class="popup">
         <h2 id="popupH2"></h2>
         <div id="popupInnerDiv">
-            <img id="popupMatchImg1" src="{{userProPic}}">
+            <img id="popupMatchImg1" src="{{user.images.profilePic}}">
             <img id="popupMatchImg2" src="">
         </div>
         <b class="close">x</b>
