--- a/views/users/images.handlebars
+++ b/views/users/images.handlebars
@@ -7,7 +7,7 @@
             <div id="proPicContainer" class="form-element">
                 <input name="proPicFile" type="file" id="file-0" accept="image/*"  tabindex="0">
                 <label for="file-0" id="file-0-preview">
-                    <img id="proPicPreview" src="../../../public/images/image-placeholder.png">
+                    <img id="proPicPreview" alt="Place to upload your profile picture" src="../../../public/images/image-placeholder.png">
                     <div>
                         <span>+</span>
                     </div>
@@ -18,7 +18,7 @@
                 <div class="form-element">
                     <input type="file" id="file-1" accept="image/*">
                     <label for="file-1" id="file-1-preview">
-                        <img src="../../../public/images/image-placeholder.png">
+                        <img alt="Place to upload an additional picture (1)" src="../../../public/images/image-placeholder.png">
                         <div>
                             <span>+</span>
                         </div>
@@ -27,7 +27,7 @@
                 <div class="form-element">
                     <input type="file" id="file-2" accept="image/*">
                     <label for="file-2" id="file-2-preview">
-                        <img src="../../../public/images/image-placeholder.png">
+                        <img alt="Place to upload an additional picture (2)" src="../../../public/images/image-placeholder.png">
                         <div>
                             <span>+</span>
                         </div>
@@ -36,7 +36,7 @@
                 <div class="form-element">
                     <input type="file" id="file-3" accept="image/*">
                     <label for="file-3" id="file-3-preview">
-                        <img src="../../../public/images/image-placeholder.png">
+                        <img alt="Place to upload an additional picture (3)" src="../../../public/images/image-placeholder.png">
                         <div>
                             <span>+</span>
                         </div>
