--- a/public/css/main-styles.css
+++ b/public/css/main-styles.css
@@ -144,8 +144,9 @@ nav {
     font-size: 2rem;
     font-weight: bold;
     margin-top: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
+    /*margin-left: 20%;*/
+    /*margin-right: 20%;*/
+    text-align: center;
 }
 
 /* Login Page */
@@ -154,6 +155,10 @@ nav {
     color: white;
     font-size: 1.75rem;
     font-weight: bold;
+}
+
+#loginForm section {
+    max-width: 450px;
 }
 
 #loginForm button {
@@ -881,6 +886,7 @@ h2 {
 
 .profileCard img {
     width: 75%;
+    max-width: 350px;
     height: auto;
     max-height: 300px;
     border-radius: 50px;
@@ -919,7 +925,8 @@ h2 {
 }
 
 .chatContainer {
-    margin-top: 50px;
+    margin: 50px auto;
+    max-width: 400px;
 }
 
 .chatContainer h3 {
@@ -975,9 +982,16 @@ h2 {
     list-style-type: none;
 }
 
+.businessDivDiv {
+    display: flex;
+    justify-content: center;
+}
+
 .businessDiv {
     display: flex;
-    margin: 20px 5px;
+    justify-content: flex-start;
+    width: 50%;
+    margin: 20px auto;
 }
 
 .businessDiv img {
